# mhumbleweb

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  Justfile  Makefile  README.md  articles.sqlite  entrypoint.sh  fly.toml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci-dry-run.yml  ci.yml  clear-cache.yml  deploy-to-fly.yaml  fly-deploy.yml  go-fuzz-action.yml  go-fuzz.yml  go-sec.yml  go.yml  pr-build-check.yml  rust.yml
cloudflared/: ab031181-277c-435a-9f0e-2cd1853fe462.json  config.yaml
cmd/web/: handlers.go  helpers.go  main.go  middleware.go  routes.go  templates.go
internal/models/: posts.go
internal/models/json/: data.json
scripts/: decrypt-cert.sh  update-wolfi-base.sh
src/: handlers.rs  main.rs  middleware.rs  models.rs  view_models.rs
static/css/: main.css  prism.css
static/js/: prism.js
templates/: about.html  article.html  articles.html  base.html  index.html
templates/articles/: 02182025_json.html  02192026_json.html  02262026_json.html  03012025_json.html  03102025_json.html  03142025_json.html  03162025_json.html  05122025_json.html  05192025_json.html  08072024_json.html  09112024_json.html  09182024_json.html
tls/: cert.pem  key.pem
ui/html/: base.gohtml
ui/html/pages/: 01182025_json.gohtml  02182025_json.gohtml  03012025_json.gohtml  03102025_json.gohtml  03142025_json.gohtml  03162025_json.gohtml  05122025_json.gohtml  05192925_json.gohtml  08072024_json.gohtml  08072924_json.gohtml  09112024_json.gohtml  09182024_json.gohtml  about.gohtml  article.gohtml  articles.gohtml  home.gohtml
(+3 files in other folders)
