[package]
name = "mhumbleweb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
tera = "1.20.1"
serde_json = "1.0.149"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true